# slurm

./: main.py  pyproject.toml
.github/workflows/: pre_commit_chek.yaml
test/: model.py  streamlit_app.py
